# devops-iot-device

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  export_eclipse_path_and_symbols_includes.xml  sdkconfig  types.h
010_Construction/MainApplication/UTIL/: CMakeLists.txt  util_conf.cpp  util_conf.h  util_gen.cpp  util_gen.h  util_matrix_indices.h  util_types.h
010_Main_Application/DD/: CMakeLists.txt  DD.c  DD.cpp  DD.h  dd_adc.cpp  dd_adc.h  dd_i2c.cpp  dd_i2c.h  dd_icm-20600.cpp  dd_icm-20600.h  dd_ina-219.cpp  dd_ina-219.h  dd_max-30102.cpp  dd_max-30102.h  dd_mcpwm.cpp  dd_mcpwm.h  dd_sd.cpp  dd_sd.h  dd_tmp-102.cpp
010_Main_Application/DD/Config/: dd_adc_cfg.c  dd_adc_cfg.cpp  dd_adc_cfg.h  dd_i2c_cfg.c  dd_i2c_cfg.h  dd_icm-20600_cfg.c  dd_icm-20600_cfg.h  dd_ina-219_cfg.c  dd_ina-219_cfg.h  dd_max-30102_cfg.c  dd_max-30102_cfg.cpp  dd_max-30102_cfg.h  dd_mcpwm_cfg.c  dd_mcpwm_cfg.cpp  dd_mcpwm_cfg.h  dd_pga-302_cfg.c  dd_pga-302_cfg.h  dd_sd_cfg.h  dd_tmp-102_cfg.cpp  dd_tmp-102_cfg.h  dd_types_cfg.h  dd_xr-18910_cfg.c  dd_xr-18910_cfg.h
010_Main_Application/DD/Core/: dd_adc.c  dd_adc.h  dd_database.c  dd_database.cpp  dd_database.h  dd_i2c.c  dd_i2c.cpp  dd_i2c.h  dd_icm-20600.c  dd_icm-20600.cpp  dd_icm-20600.h  dd_ina-219.c  dd_ina-219.cpp  dd_ina-219.h  dd_max-30102.c  dd_max-30102.h  dd_mcpwm.c  dd_mcpwm.cpp  dd_mcpwm.h  dd_pga-302.c  dd_pga-302.h  dd_sd.c  dd_sd.cpp  dd_sd.h  dd_tmp-102.c  dd_tmp-102.h  dd_types.h  dd_xr-18910.c  dd_xr-18910.h
010_Main_Application/DD/Interface/: dd_adc_if.c  dd_adc_if.h  dd_i2c_if.c  dd_i2c_if.cpp  dd_i2c_if.h  dd_icm-20600_if.c  dd_icm-20600_if.cpp  dd_icm-20600_if.h  dd_icm-20600_interface.c  dd_icm-20600_interface.h  dd_ina-219_if.c  dd_ina-219_if.h  dd_max-30102_if.c  dd_max-30102_if.h  dd_max-30102_interface.c  dd_max-30102_interface.h  dd_mcpwm_if.c  dd_mcpwm_if.h  dd_pga-302_if.c  dd_pga-302_if.h  dd_public_types.h  dd_sd_if.c  dd_sd_if.h  dd_sd_interface.c  dd_sd_interface.h  dd_tmp-102_if.c  dd_tmp-102_if.h  dd_xr-18910_if.c  dd_xr-18910_if.h  dd_xr-18910_interface.c  dd_xr-18910_interface.h
010_Main_Application/OS/: CMakeLists.txt  OS.c  OS.cpp  OS.h  os_main.c  os_ota.h  os_sc.c  os_sc.h  os_time.c  os_time.cpp  os_time.h  os_tm.c  os_tm.h
010_Main_Application/OS/Config/: os_ota_cfg.h  os_tm_cfg.cpp  os_wifi_cfg.h  os_ws_cfg.c  os_ws_cfg.h
010_Main_Application/OS/Core/: os_tm.c  os_tm.h  os_types.h  os_wifi.c  os_wifi.h  os_ws.c  os_ws.h
010_Main_Application/SENSE/: CMakeLists.txt  SENSE.c  SENSE.cpp  SENSE.h  sense_hr.cpp  sense_mtn.cpp  sense_mtn.h  sense_spo2.cpp  sense_ts.cpp  sense_ts.h
010_Main_Application/SENSE/Config/: sense_hr_cfg.c  sense_hr_cfg.h  sense_mtn_cfg.c  sense_mtn_cfg.h  sense_spo2_cfg.c  sense_ts_cfg.c  sense_ts_cfg.h  sense_types_cfg.h
010_Main_Application/SENSE/Core/: sense_database.c  sense_database.h  sense_hr.h  sense_mtn.c  sense_mtn.h  sense_ts.c  sense_ts.h  sense_types.h
010_Main_Application/SENSE/Interface/: sense_hr_if.c  sense_hr_if.h  sense_hr_interface.c  sense_mtn_if.c  sense_mtn_if.h  sense_public_types.h  sense_spo2_if.c  sense_spo2_if.h  sense_ts_if.c  sense_ts_if.h  sense_ts_interface.c  sense_ts_interface.h
010_Main_Application/UTIL/: CMakeLists.txt  KalFil1D.h  KalFilChk.c  KalFilChk_Cfg.h  KalFilGen.h  ModCAA.c  ModCACV.c  ModTypes.h  UTIL.h  confidence.c  confidence.h  filter_utility.c  least_squares.c  least_squares.h  matrix_indices.h  matrix_manipulation.c  matrix_manipulation.h  newton_raphson.h  polynomial_line.h  ring_structure.h  util_conf.c  util_conf.h  util_confidence.c  util_confidence.h  util_gen.c  util_gen.h  util_types.h
010_Main_Application/UTIL/NO_IN_USE/: KalFil1D.c  KalFilChk.h  KalFilChk_Cfg.c  KalFilGen.c  ModCAA.h  ModCACV.h  ModTypes.h  assignment.c  assignment.h  filter_utility.c  filter_utility.h  (+9 more)
020_Test/SeWelaSim/: CMakeLists.txt  CMake_MainApplication.txt  build.cmd  sewela_sim.cpp  sewela_sim.h
020_Test/WeGetASim/: CMakeLists.txt  build.cmd  ecu_control_wegeta.cpp
DD/: CMakeLists.txt  DD.c  DD.h
DD/Config/: dd_i2c_Cfg.c  dd_i2c_Cfg.h  dd_i2c_cfg.c  dd_icm-20600_Cfg.c  dd_icm-20600_Cfg.h  dd_icm-20600_cfg.c  dd_icm-20600_cfg.h  dd_max-30102_Cfg.c  dd_max-30102_Cfg.h  dd_max-30102_cfg.c  dd_max-30102_cfg.h  dd_sd_cfg.c  dd_sd_cfg.h  dd_types_Cfg.h  dd_types_cfg.h  dd_xr-18910_Cfg.c  dd_xr-18910_Cfg.h  dd_xr-18910_cfg.c  dd_xr-18910_cfg.h
DD/Core/: dd_database.c  dd_database.h  dd_i2c.c  dd_i2c.h  dd_icm-20600.c  dd_icm-20600.h  dd_max-30102.c  dd_max-30102.h  dd_sd.c  dd_sd.h  dd_types.h  dd_xr-18910.c  dd_xr-18910.h
DD/Interface/: dd_i2c_interface.c  dd_i2c_interface.h  dd_icm-20600_interface.c  dd_icm-20600_interface.h  dd_icm-20600_oif.c  dd_icm-20600_oif.h  dd_max-30102_interface.c  dd_max-30102_interface.h  dd_max-30102_oif.c  dd_public_types.h  dd_sd_interface.c  dd_sd_interface.h  dd_xr-18910_interface.c  dd_xr-18910_interface.h  dd_xr-18910_oif.c
DLG/: CMakeLists.txt  DLG.c  DLG.dbc  DLG.h
DLG/Config/: dlg_log_cfg.h
DLG/Core/: dlg_database.c  dlg_database.h  dlg_log.c  dlg_types.h
DLG/Interface/: dlg_log_interface.c  dlg_log_interface.h
DLG/file_server/: main.c  server.c  upload_script.html
DLG/wifi/: connect.c  stdin_out.c
SENSE/: CMakeLists.txt  SENSE.c  SENSE.h
SENSE/Config/: sense_fsr_cfg.c  sense_fsr_cfg.h  sense_hr_spo2_cfg.c  sense_hr_spo2_cfg.h  sense_spo2_cfg.h  sense_ts_cfg.h  sense_types_cfg.h
SENSE/Core/: sense_database.c  sense_database.h  sense_fsr.c  sense_fsr.h  sense_hr.c  sense_hr_spo2.c  sense_hr_spo2.h  sense_spo2.h  sense_types.h
SENSE/Interface/: sense_fsr_interface.c  sense_fsr_interface.h  sense_hr_interface.h  sense_hr_spo2_interface.c  sense_hr_spo2_interface.h  sense_public_types.h  sense_spo2_interface.c  sense_spo2_interface.h
TS/: CMakeLists.txt  TS.c  TS.h
TS/Config/: ts_fsr_preproc_Cfg.c  ts_fsr_preproc_Cfg.h  ts_types_Cfg.h
TS/Core/: ts_database.c  ts_database.h  ts_fsr_preproc.c  ts_fsr_preproc.h  ts_types.h
TS/Interface/: ts_input_interface.c  ts_input_interface.h  ts_output_interface.c  ts_output_interface.h  ts_public_types.h
(+186 files in other folders)
